--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
-    "react-awesome-slider": "^1.0.1",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-grid-gallery": "^0.5.5",
+    "react-icons": "^2.2.7",
     "react-image-gallery": "^0.8.18",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
